fix page jump for mobile url bar w/ 100vh elements. add utils (isMobile, debounce).

--- a/src/scss/partials/_site.scss
+++ b/src/scss/partials/_site.scss
@@ -32,6 +32,14 @@ img {
   }
 }
 
+#mobile-detect {
+  display: block;
+
+  @media (max-width: $breakpoint--mobile-max){
+    display: none;
+  }
+}
+
 .full-page {
   min-height: 100vh;
   max-width: 960px;
